--- a/package.json
+++ b/package.json
@@ -45,10 +45,9 @@
   "homepage": "https://github.com/PedroBern/react-native-collapsible-tab-view#readme",
   "devDependencies": {
     "@commitlint/config-conventional": "^9.1.1",
-    "@expo/vector-icons": "^10.2.0",
     "@react-native-community/bob": "^0.16.2",
-    "@react-navigation/material-top-tabs": "^5.3.10",
-    "@react-navigation/native": "^5.8.10",
+    "@react-navigation/material-top-tabs": "5",
+    "@react-navigation/native": "5",
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/react": "^16.9.44",
     "@types/react-native": "0.63.4",
