--- a/package.json
+++ b/package.json
@@ -51,22 +51,23 @@
     "@release-it/conventional-changelog": "^1.1.4",
     "@types/react": "^16.9.44",
     "@types/react-native": "0.63.4",
+    "@typescript-eslint/eslint-plugin": "^8.23.0",
+    "@typescript-eslint/parser": "^8.23.0",
     "babel-jest": "^26.2.2",
     "babel-preset-react-native": "^4.0.0",
     "commitlint": "^9.1.0",
-    "eslint": "^7.6.0",
-    "eslint-config-satya164": "^3.1.7",
-    "eslint-plugin-react-native-globals": "^0.1.2",
+    "eslint": ">=8.10 <9",
+    "eslint-config-universe": "^14.0.0",
     "husky": "^4.2.5",
     "jest": "^26.2.2",
-    "prettier": "2.0.5",
+    "prettier": "^3.4.2",
     "react": "~16.11.0",
     "react-native": "~0.62.2",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-reanimated": "~1.9.0",
     "react-native-tab-view": "^2.16.0",
     "release-it": "^13.6.6",
-    "typescript": "^3.9.7"
+    "typescript": "5.0.4"
   },
   "peerDependencies": {
     "@react-navigation/material-top-tabs": "^5",
