--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "prettier": "^3.4.2",
     "react": "~16.11.0",
     "react-native": "~0.62.2",
-    "react-native-tab-view": "^2.16.0",
+    "react-native-pager-view": "^4.2.4",
+    "react-native-tab-view": "3.0.0",
     "release-it": "^13.6.6",
     "typescript": "5.0.4"
   },
